# ks-aur-scanner

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PKGBUILD  README.md  SECURITY.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  false_positive.yml  rule_request.yml
.github/workflows/: audit.yml  ci.yml
aur/aur-scanner-git/: .SRCINFO  PKGBUILD
aur/aur-scanner-rc/: .SRCINFO  PKGBUILD
crates/aur-scanner-cli/: Cargo.toml
crates/aur-scanner-cli/src/: main.rs
crates/aur-scanner-cli/src/commands/: banner.rs  check.rs  codes.rs  explain.rs  fm.rs  install.rs  ioc.rs  mod.rs  rules.rs  scan.rs  system.rs  version.rs
crates/aur-scanner-cli/src/output/: mod.rs
crates/aur-scanner-cli/tests/: cli_behavior.rs  evasion_fuzzer.rs
crates/aur-scanner-core/: Cargo.toml
crates/aur-scanner-core/src/: aur.rs  depgraph.rs  error.rs  lib.rs  neturl.rs  paru.rs  provenance.rs  resolve.rs  sbom.rs  textutil.rs  types.rs  validate.rs
crates/aur-scanner-core/src/analyzer/: binary.rs  blocklist.rs  checksum.rs  deep.rs  ioc.rs  metadata.rs  mod.rs  pattern.rs  pkgmanager.rs  privilege.rs  remote_exec.rs  source.rs
crates/aur-scanner-core/src/cache/: mod.rs
crates/aur-scanner-core/src/catalog/: mod.rs
crates/aur-scanner-core/src/data/: aur_malware_packages.txt
crates/aur-scanner-core/src/parser/: mod.rs  static_parser.rs
crates/aur-scanner-core/src/rules/: loader.rs  mod.rs
crates/aur-scanner-core/src/threat_intel/: ioc.rs  mod.rs  remote.rs
crates/aur-scanner-hook/: Cargo.toml
crates/aur-scanner-hook/src/: main.rs
crates/aur-scanner-plugin/: Cargo.toml
crates/aur-scanner-plugin/src/: lib.rs
docs/: SECURITY-AUDIT-2026-06-13.md  THREAT-COVERAGE.md
docs/examples/: README.md  capture.sh
docs/examples/dataset/: meta.txt  version.out
docs/examples/dataset/codes/: json.out  markdown.out  text.out
docs/examples/dataset/explain/: ATOMIC-001.out  ATOMIC-002.out  ATOMIC-003.out  CRED-001.out  CRYPTO-001.out  CRYPTO-003.out  DLE-001.out  EXEC-REMOTE.out  INSTALL-004.out  PASTE-001.out  PERSIST-001.out  PERSIST-002.out  SHELL-001.out
docs/examples/dataset/help/: aur-scan.out  check.out  codes.out  explain.out  install.out  ioc.out  rules.out  scan.out  system.out  version.out
docs/examples/dataset/sbom/: clean-example-package.cdx.json  clean-example-package.sbom.txt
install/: aur-scan.hook  integration.bash  integration.fish  integration.nu  integration.zsh
tests/fixtures/clean/example-package/: PKGBUILD
tests/fixtures/clean/git-package/: PKGBUILD
tests/fixtures/malicious/chaos-rat/: PKGBUILD  firefox-patch.install
tests/fixtures/malicious/credential-theft/: PKGBUILD
tests/fixtures/malicious/cryptominer/: PKGBUILD
tests/fixtures/malicious/curl-bash/: PKGBUILD
tests/fixtures/malicious/exfil-channels/: PKGBUILD  stats-collector.install
tests/fixtures/malicious/launcher-shell/: PKGBUILD  launcher-shell.install
tests/fixtures/malicious/npm-install-hook/: PKGBUILD
(+84 files in other folders)
