[package]
name = "aur-scanner-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI tool for AUR package security scanning"

[[bin]]
name = "aur-scan"
path = "src/main.rs"

[dependencies]
aur-scanner-core.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
colored.workspace = true
anyhow.workspace = true
dirs = "5.0"
