[package]
name = "aur-scanner-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI tool for AUR package security scanning - detect malicious PKGBUILDs before installation"
readme = "../../README.md"

[[bin]]
name = "aur-scan"
path = "src/main.rs"

[dependencies]
aur-scanner-core.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
colored.workspace = true
anyhow.workspace = true
dirs = "5.0"
