[package]
name = "aur-scanner-hook"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Pacman hook for AUR package security scanning - blocks malicious packages during transactions"
readme = "../../README.md"

[[bin]]
name = "aur-scan-hook"
path = "src/main.rs"

[dependencies]
aur-scanner-core.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
colored.workspace = true
anyhow.workspace = true
